--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <button class="menu-toggle" id="menu-toggle">☰</button>
     <a href="index.html" class="logo"><img src="img/logo-a.png" alt="Logo AUGE"> CORPORACIÓN AUGE</a>
     <div class="auth-buttons">
-      <button onclick="showAlert('¿Ya tienes una cuenta? ¡Inicia sesión!')">Iniciar Sesión</button>
-      <button onclick="showAlert('¿Aún no tienes cuenta? ¡Regístrate!')">Registrarse</button>
+      <a href="login.html"><button>Iniciar Sesión</button></a>
+      <a href="registro.html"><button>Registrarse</button></a>
     </div>
   </header>
 
