--- a/login.html
+++ b/login.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Iniciar Sesión | Corporación AUGE</title>
+  <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <header>
+    <a href="index.html" class="logo"><img src="img/logo-a.png" alt="Logo AUGE"> CORPORACIÓN AUGE</a>
+  </header>
+
+  <main class="form-main">
+    <h1>Iniciar Sesión</h1>
+    <form class="form-box">
+      <input type="email" placeholder="Correo electrónico" required>
+      <input type="password" placeholder="Contraseña" required>
+      <button type="submit">Ingresar</button>
+    </form>
+  </main>
+
+</body>
+</html>
 
