--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header>
     <button class="menu-toggle" id="menu-toggle">☰</button>
-    <a href="index.html" class="logo"><img src="img/logo-a.png" alt="Logo AUGE"> CORPORACIÓN AUGE</a>
+    <a href="index.html" class="logo"><img src="LOGO DE APOGEO.png" alt="Logo AUGE"> CORPORACIÓN AUGE</a>
     <div class="auth-buttons">
       <a href="login.html"><button>Iniciar Sesión</button></a>
       <a href="registro.html"><button>Registrarse</button></a>
